[package]
name = "csv-convert-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "*"
router = "*"
staticfile = "*"
mount = ">= 0.3, <0.5"
plugin = "0.2"
persistent = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.151"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[dev-dependencies]
serde_derive = "1.0"
